# CCP_plazza_2018

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  shell.nix
src/: Command.hpp  Cook.cpp  Cook.hpp  Ingredient.hpp  Kitchen.cpp  Kitchen.hpp  Order.cpp  Order.hpp  Reception.cpp  Reception.hpp  Shell.cpp  Shell.hpp  Stock.cpp  Stock.hpp  main.cpp
src/kitchen/: Ipc.cpp  Ipc.hpp  Kitchen.cpp  Kitchen.hpp  KitchenManager.cpp  KitchenManager.hpp  Process.cpp  Process.hpp
src/parse/: ArgParser.cpp  ArgParser.hpp  CommandParser.cpp  CommandParser.hpp  OrderParser.cpp  OrderParser.hpp
src/pizza/: APizza.cpp  APizza.hpp  IPizza.hpp  Ingredient.hpp  Margarita.cpp  Margarita.hpp  PizzaException.hpp  PizzaFactory.cpp  PizzaFactory.hpp  PizzaFantasia.hpp  PizzaMargarita.hpp  PizzaSize.hpp  PizzaType.hpp  Resolver.cpp  Resolver.hpp  SerializedPizza.cpp  SerializedPizza.hpp
src/pizza/pizzas/: PizzaAmericana.hpp  PizzaFantasia.hpp  PizzaMargarita.hpp  PizzaRegina.hpp
tests/: ArgParserTest.cpp  KitchenManagerTest.cpp  KitchenTest.cpp  OrderTest.cpp  PizzaTest.cpp  SerializedPizzaTest.cpp  StockTest.cpp
tests/parse/: CommandParserTest.cpp  OrderParserTest.cpp
